# Renderer_3D

./: Cargo.toml
src/: calc_structs.rs  compute_shader.wgsl  gpu_instructions.rs  grouping_shader.wgsl  lib.rs  main.rs  outline_shader.wgsl  reducing_compute_stage_1_shader.wgsl  reducing_compute_stage_2_shader.wgsl  reducing_compute_stage_3_shader.wgsl  reduction_u8_shader.wgsl  render_lib.rs  render_shader.wgsl  server_communication.rs  utility.rs
static/: index.html  index2D.html  index_renderer.html
static/assets/icons/: webapp icon.clip
