[package]
name = "Renderer_3D"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
futures-util = "0.3"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
tide-websockets = "0.4.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.17"
askama = "0.12.1"
actix = "0.13.3"
actix-web = "4.0.0"
actix-cors = "0.6.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8"
actix-files = "0.6"
colored = "2.1"